--- a/TestMyDrawing/MainForm.resx
+++ b/TestMyDrawing/MainForm.resx
@@ -120,4 +120,100 @@
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>36</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAIAEBAAAAEAIABoBAAAJgAAACAgAAABACAAqBAAAI4EAAAoAAAAEAAAACAAAAABACAAAAAAADAE
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA///iNf//4FoAAAAAAAAAAAAAAAAAAAAA///qDP//
+        6gwAAAAAAAAAAAAAAAD///8E///hbv//4jUAAAAAAAAAAAAAAAD//+Mk///iTgAAAAAAAAAAAAAAAP//
+        3Q///90PAAAAAAAAAAAAAAAA///gY///5BMAAAAAAAAAAAAAAAAAAAAAAAAAAP//32n///8CAAAAAAAA
+        AAD//+oM///qDAAAAAAAAAAA///bB///4GMAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD//98o///hRQAA
+        AAAAAAAA///qDP//6gwAAAAAAAAAAP//4FL//+MbAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP//
+        4GoAAAAAAAAAAP//6gz//+oMAAAAAAAAAAD//+BsAAAAAAAAAAAAAAAAAAAAAAAAAAD//+YK///mCv//
+        3Q///+By///mCv//5gr//9wd///cHf//5gr//+gL///edf//3Q///+YK///mCgAAAAAAAAAA///bB///
+        2wf//+YK///kTP//4Cn//9sH///oFv//6Bb//9sH///hM///3kb//+YK///bB///2wcAAAAAAAAAAAAA
+        AAAAAAAAAAAAAP//3wj//99fAAAAAP//6gz//+oMAAAAAP//4GP//8wFAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA///faQAAAAD//+oM///qDAAAAAD//99oAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAP//4FH//90e///dD///3Q///+Ah///gSQAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD///8E///ge///6gz//+gL///gdf///wIAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP//4CH//+Jx///icf//4xsAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAP//AAD//wAA//8AAP//AAD//wAA//8AAP//AAD//wAA//8AAP//
+        AAD//wAA//8AAP//AAD//wAA//8AAP//AAAoAAAAIAAAAEAAAAABACAAAAAAAIAQAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP//5hT//+F+///hRAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD//+Ay///gMQAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAP///wP//+FV///ggv//5hQAAAAAAAAAAAAAAAAAAAAA////A///
+        4En//+Cd///hoP///wMAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP//5gr//+YKAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD//98Q///fwv//4IP//+FD////AwAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAD//+F2///gjAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA///ePv//
+        4j0AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP//37L//99PAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAP///wH//+C////gKQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAD//9wd///cHQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD//+BK///hnwAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP//3z///+GfAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAP//5Bz//+QcAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP//4L7//9wdAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA////Af//4M7//+oMAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA///hPP//4TsAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD//+Eq///grwAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA///fgP//
+        4FsAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD//+YK///mCgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP//
+        4X///+FWAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAD//98g///guwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP//4DL//+AxAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAA///hyf//5goAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAD//+DG///dDwAAAAAAAAAAAAAAAAAAAAAAAAAA///gMv//4DEAAAAAAAAAAAAA
+        AAAAAAAAAAAAAP//3B3//+C0AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAP//4Yb//99PAAAAAAAAAAAAAAAAAAAAAAAAAAD//+YK///mCgAA
+        AAAAAAAAAAAAAAAAAAAAAAAA///fYf//4HIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA///fP///4JUAAAAAAAAAAAAAAAAAAAAAAAAAAP//
+        3j7//+I9AAAAAAAAAAAAAAAAAAAAAAAAAAD//+Cn///iLAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAD//+oM///eLv//3i7//+oM///gOv//3B3//+Ah///h2v//6gz//94u///eLv//
+        6gz//+A6///aN///2jf//+A6///qDP//3i7//94u///uD///4Nv//9wd///cHf//4Dr//+oM///eLv//
+        3i7//+oMAAAAAAAAAAAAAAAAAAAAAP//6Av//+Mt///jLf//6Av//984///kHP//5Bz//9/B///oLf//
+        4y3//+Mt///oC///3zj//+I1///iNf//3zj//+gL///jLf//4y3//98////gs///5Bz//+Qc///fOP//
+        6Av//+Mt///jLf//6AsAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP//
+        4Gv//99oAAAAAAAAAAAAAAAAAAAAAP//4Tz//+E7AAAAAAAAAAAAAAAAAAAAAP//4Hr//+BbAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAA///dJf//4K0AAAAAAAAAAAAAAAAAAAAA///mCv//5goAAAAAAAAAAAAAAAAAAAAA///gvv//
+        3xgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA///gzf//zAUAAAAAAAAAAAAAAAD//+Ay///gMQAAAAAAAAAAAAAAAP//
+        2w7//+DIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD//+CO///fRwAAAAAAAAAAAAAAAP//4DL//+AxAAAAAAAA
+        AAAAAAAA///hXf//4X8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP//4jX//+CiAAAAAAAAAAAAAAAA///mCv//
+        5goAAAAAAAAAAAAAAAD//+C1///eJwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP//38r//+gLAAAAAAAA
+        AAD//94+///iPQAAAAAAAAAA///cFv//38IAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA///hdv//
+        32cAAAAAAAAAAP//3B3//9wdAAAAAAAAAAD//995///hZQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAD//98Q///g0P//6AsAAAAA///kHP//5BwAAAAA///bDv//4M3//98IAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAD//99f///gpAAAAAD//+E8///hO////wP//+Cu///gUQAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD//+CF///gtf//4FL//+BT///gvf//4HQAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD//+Ay///gkv//4ZH//98wAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAP/////////////////////////38///z/3//7/9//+//v//f/7/
+        /3/+/////3/+//9//v//f////7/9//+//f//v/3////////f+///3/v//9/////v9///7/f////////3
+        7///+9////m////+f///////////////////////
+</value>
+  </data>
 </root>
